# CrewCast

./: .gitignore  CLAUDE.md  README.md  demo.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js
src-tauri/: .rustfmt.toml  Cargo.toml  tauri.conf.json
src-tauri/.sqlx/: query-04370ee2ca059d946c67f559d5e81346ff489318b40c04c38b30b2d0597a126e.json  query-06398bba9c9be50d0c425e0a73778edf5267ef2f5c95a4e4744770a345b509e6.json  query-15c0f4125e980ce15e7c78b4046ce20c35c57e229817467375039cddeb7103ac.json  query-196d93272c5bcb77e58346ef6d76513c2b631d781812c74e92cd28cfecb8d557.json  query-26582fbf6a73742b6e041c0aa5369aaec464451466a92ec3371ba58297023e21.json  query-2880e049cd8b478a456aa130aadcbdbb9268715fc1959d7e4df2831898c8a44f.json  query-2d238798319471915dcfe1474b974b4f479bae47ad95420d16f5298f9ec712d8.json  query-2e26c3ca60fb3a47cb412891bf6ac7a621c858a66b1ba6880e4dc1ebadda20dd.json  query-5f50e89f37165474d542fc43fc8a77f9c79b0d787033b1fe574a1731a190e9ad.json  query-82512a9843f1fb843658f95308174f72e03f1d570899f5c711487a1cc5df7f2f.json  query-83940c40bbfb4dcd70c977a7c45a067c34b29c3a36b2b94ba3b424689f23748a.json  query-8696600fbae26a5beca6fb43f9d497f9126ed184da8f338c1cbc7ec8bf69fc43.json  query-8f236de52fe54a0a3800691ccb3b4885b767e15a540a1b48f847fc762a37de2b.json  query-a15460e9004ac5fa5fae371912cdc88cf953530cde34197970502b8f12b842c6.json  query-a2e2013fc21d033e54b79f2096e2ca02e50ced0a4ca78db9206ab7e12b5bde3c.json  query-a6b030dbd75dc13d7cb8844f5611410dec99a843faba894ad20e9db51e9b8664.json  query-abd6f48b037e61bea487b0ef3c4950b1077d24ff76f8c93841145377b2873cce.json  query-c4d745cda459da9d71ab512a53d76c840c9ac0125812773b21112685b645a1c5.json  query-c7b9abfa7fafa468d4f50c5a17403ea5a84b2afb0b27797d49a633fb9ac92e9a.json  query-cb54127824123ec82b6390a532ef1ae02e9b8feda41437c94271b9fa2373758c.json  query-d360a2255628f87fb80ad36b18c9e5d94d71d9e6abe055b0adae4eeef181908f.json  query-da662bd4c5c2060951af9619f3dad9d861cf472da992528a84f0caf5a63ee8b2.json  query-dc229adff903ffec1076f44c57146229c5eb6200ac52c0b47ea9c2d21f361c27.json  query-e694c5b181614bd55ccbb77c23619d62afcda6a67205bfcd5bb084588490bd51.json  query-e702a216743132b5da8ea19d0b537253d31842eb5804c820444fd9451294800c.json  query-f339cdbc75f11159fbc7ce63f2e2fbb3e0bb676eb3d3ec6c008164b2bd66c6ce.json
src-tauri/migrations/: 20250813035743_nodes.sql  20250815074153_topics.sql  20250815151506_users.sql  (+1 more)
src-tauri/src/: lib.rs  (+2 more)
(+38 files in other folders)
