[package]
name = "crewcast"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "crewcast_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1.0.98"
chrono = "0.4.41"
data-encoding = "2.9.0"
futures-lite = "2.6.1"
iroh = { version = "0.91.1", default-features = false, features = [
    "discovery-local-network",
] }
iroh-blobs = "0.92"
iroh-gossip = "0.91.0"
rand = "0.8.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8.6", default-features = false, features = [
    "runtime-tokio",
    "macros",
    "migrate",
    "derive",
    "sqlite",
    "json",
    "chrono",
] }
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
thiserror = "2.0.14"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7.16"
